--- a/bruhchart/index.html
+++ b/bruhchart/index.html
@@ -9,8 +9,8 @@
   <script type="module" src="app.js"></script>
 </head>
 
-<body style="margin: 0;">
-
+<body style="margin: 0; background-color: #000;">
+  <h1>Loading...</h1>
 </body>
 
 </html>
